style.css
body{
	-webkit-font-smoothing: antialiased;
}

html{
	scroll-behavior: smooth;
}

*{
	font-family: 'Roboto Mono', monospace !important;
	color: #142D3D;
	font-size: 13px;
}

/*----------------------LINK STYLES-------------------------*/
a,
a:link{
	background-color: #142D3D;
	text-decoration: none;
	font-weight: bold;
	}
a:hover{
	background-color: #F1F080;
}
a:active,
a:visited,
a.social:hover{
		padding-bottom: 0.25em;
		background-color: transparent;
	}
a.nav-link{
	background-color: transparent;
	font-weight: bold;
	font-size: 0.8em;
	padding: 8px;
}
a.nav-link:hover{
	font-weight: bolder;
	background-color: #F1F080;
	font-size: 0.8em;
}
a.body-link{
	background-color: #F1F080;
}
a.body-link:hover{
	background-color: #142D3D;
	color: #FFFFFF;
}

/*----------------------CONTENT STYLING-------------------------*/
.content{
	width: 50%;
	margin: auto;
}

.body-container{
	display: flex;
	flex-direction: column;
	align-items: center;
	margin:auto;
	width:100%;
}

.date{
	display: flex;
	width: 60%;
	margin-top: 20%;
	padding: 16px 0;
	font-size: 0.8em;
	line-height: 16px;
	opacity: 70%;
	min-width: 300px;
}

.title{
	width: 60%;
	font-size: 3em;
	font-weight: bolder;
	padding: 16px 0;
	min-width: 300px;
}

.body-copy{
	padding: 48px 0;
	line-height: 24px;
	width: 40%;
	min-width: 300px;
}

.subtext{
	padding: 16px 0;
	font-size: 0.8em;
	line-height: 16px;
	width: 40%;
	min-width: 300px;
}

.disclaimer{
	padding: 16px 0;
	font-size: 0.8em;
	line-height: 16px;
	width: 40%;
	min-width: 300px;
}

.copyright{
	margin:auto;
	width:100%;
	padding-top: 48px;
	padding-bottom: 300px;
	font-size: 0.8em;
	line-height: 16px;
	width: 40%;
	min-width: 300px;
}

/*----------------------HELLO-------------------------*/
.hello{
	display: flex;
	flex-direction: column;
	align-items: center;
	height: 100vh;
}

.hello-title{
	margin-top: 20%;
	width: 60%;
	font-size: 3em;
	font-weight: bolder;
	padding-bottom: 48px;
	min-width: 300px;
}

/*----------------------tl;dr-------------------------*/
.tldr{
	display: flex;
	flex-direction: column;
	align-items: center;
	margin:auto;
	height: 100vh;
	width:100%;
}

.tldr-title{
	margin-top: 20%;
	width: 60%;
	font-size: 3em;
	font-weight: bolder;
	padding-bottom: 48px;
	min-width: 300px;
}

/*---------------------IMAGE STYLING-------------------------*/
.dx-img{
	width:360px;
	height:420px;
	padding-top:50px;
	padding-bottom:50px;">
}

.aviation-img{
	width:284px;
	height:360px;
	padding-top:50px;
	padding-bottom:50px;
}

.dataviz-img{
	width:284px;
	height:360px;
	padding-top:50px;
	padding-bottom:50px;
}

.vision-science-img{
	width:284px;
	height:180px;
	padding-top:80px;
	padding-bottom:80px;
}

/*----------------------NAV-------------------------*/
.navigation{
	display: flex;
	flex-direction: column;
	align-items: center;
}

.nav{
	width: 60%;
	display: flex;
	flex-direction: row;
  justify-content: flex-start;
  padding: 16px 0;
	padding-right: 24px;
	margin-bottom: 40px;
	background-color: #FFFFFF;
	overflow: hidden;
	position: fixed;
	bottom: 0;
	height: 10px;
}

.ul{
	list-style-type: none;
	padding-left: 8px;
	padding-right: 8px;
}

.social-nav{
	display: flex;
  justify-content: flex-end;
	align-items: center;
  padding: 16px 0;
	padding-right: 24px;
	background-color: #142D3D;
	overflow: hidden;
	position: fixed;
	bottom: 0;
	width: 60%;
	height: 10px;
}

/* media queries */
/* Phones: Portrait and Landscape */
@media (max-width: 767px) {
		.bottom-nav{
			width: 100%;
			padding: 10px 0;
			padding-right: 24px;
		}
		a:link{
			font-weight: bolder;
			color: #142D3D;
			text-decoration: none;
			background-color: #F1F080;
			}
		a.social{
				background-color: #142D3D;
			}
		.nav{
			visibility: hidden;
		}
}

/* Tablets: Portrait*/
@media only screen
  and (min-device-width: 768px)
  and (max-device-width: 1024px)
  and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 1) {
		.content{
			width: 100%;
		}
		.bottom-nav{
			width: 100%;
			padding-right: 24px;
		}
		a:link{
			font-weight: bolder;
			color: #142D3D;
			text-decoration: none;
			}
		a.social{
				background-color: #142D3D;
			}
		a.nav-link{
			font-weight: bolder;
			color: #142D3D;
			text-decoration: none;
			background-color: #F1F080;
		}
}

